# rust-chat-agent

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  config.toml.example  deny.toml  journal.jsonl  justfile  main.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
config/: models.json  models.json.example
src/: client.rs  config.rs  conversation.rs  error.rs  http.rs  journal.rs  lib.rs  llm.rs  main.rs  paths.rs  run.rs  runtime.rs  search.rs
src/agent/: memory.rs  mod.rs
src/contracts/: error.rs  mod.rs  provenance.rs  session.rs  types.rs
src/rank/: chunked.rs  mod.rs
src/render/: mod.rs
src/search/: http.rs  mod.rs  registry.rs
src/search/backends/: arxiv.rs  brave.rs  crates_io.rs  crossref.rs  duckduckgo.rs  firecrawl.rs  freedictionary.rs  gdelt.rs  github.rs  hn.rs  lobsters.rs  marginalia.rs  mdn.rs  mod.rs  mojeek.rs  mwmbl.rs  npm.rs  openlibrary.rs  pubmed.rs  reddit.rs  searchmysite.rs  searxng.rs  semantic_scholar.rs  stackexchange.rs  stract.rs  wiby.rs  wikidata.rs  wikipedia.rs
src/session/: mod.rs
src/summarize/: mod.rs
src/tools/: fetch_page.rs  meta_search.rs  mod.rs
tests/: answer_pipeline.rs  cli_bin.rs  configured_models_live.rs  extracted.rs  http_llm.rs  orchestration.rs  p1_rig_contract.rs  p3_memory_contract.rs  paths_journal.rs  queries.txt  retry.rs  run_eval.py  search_http_fixtures.rs
tests/common/: mod.rs
