[package]
name = "answerbot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# reqwest 0.13 renamed the old `rustls-tls` feature to `rustls`.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
# Loads variables from .env into the process environment at startup.
dotenvy = "0.15"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Noisy pedantic lints that don't pay for themselves in a small binary crate.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
